--- a/generate-test-train-data.ipynb
+++ b/generate-test-train-data.ipynb
@@ -10,11 +10,7 @@
     "\n",
     "# Setup\n",
     "\n",
-    "1. Install [miniconda](https://docs.conda.io/en/latest/miniconda.html) by selecting the installer that fits your OS version. Once it is installed you may have to restart your terminal (closing your terminal and opening again)\n",
-    "2. In this directory, open terminal\n",
-    "3. `conda env create -f environment.yml`\n",
-    "4. `conda activate hxl-prediction` use this runtime to run this notebook \n",
-    "5. Set `OPENAI_API_KEY` in `.env`"
+    "1. Create a virtual environment with Python 3.11.4 and run `pip install -r requirements.txt`\n"
    ]
   },
   {
@@ -2352,69 +2348,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Model Tuning Open AI"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def fine_tune_model(train_file, model_name=\"gpt-4o-mini\"):\n",
-    "    \"\"\"\n",
-    "    Fine-tune an OpenAI model using training data.\n",
-    "\n",
-    "    Args:\n",
-    "        prompt_file (str): The file containing the prompts to use for fine-tuning.\n",
-    "        model_name (str): The name of the model to fine-tune. Default is \"davinci-002\".\n",
-    "\n",
-    "    Returns:\n",
-    "        str: The ID of the fine-tuned model.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    client = OpenAI(\n",
-    "        api_key=os.getenv(\"OPENAI_API_KEY\")\n",
-    "    )\n",
-    "\n",
-    "    # Create a file on OpenAI for fine-tuning\n",
-    "    file = client.files.create(\n",
-    "        file=open(train_file, \"rb\"),\n",
-    "        purpose=\"fine-tune\"\n",
-    "    )\n",
-    "    file_id = file.id\n",
-    "    print(f\"Uploaded training file with ID: {file_id}\")\n",
-    "\n",
-    "    # Start the fine-tuning job\n",
-    "    ft = client.fine_tuning.jobs.create(\n",
-    "        training_file=file_id,\n",
-    "        model=model_name\n",
-    "    )\n",
-    "    ft_id = ft.id\n",
-    "    print(f\"Fine-tuning job started with ID: {ft_id}\")\n",
-    "\n",
-    "    # Monitor the status of the fine-tuning job\n",
-    "    ft_result = client.fine_tuning.jobs.retrieve(ft_id)\n",
-    "    while ft_result.status != 'succeeded':\n",
-    "        print(f\"Current status: {ft_result.status}\")\n",
-    "        time.sleep(120)  # Wait for 60 seconds before checking again\n",
-    "        ft_result = client.fine_tuning.jobs.retrieve(ft_id)\n",
-    "        if 'failed' in ft_result.status.lower():\n",
-    "            sys.exit()\n",
-    "\n",
-    "    print(f\"Fine-tuning job {ft_id} succeeded!\")\n",
-    "\n",
-    "    # Retrieve the fine-tuned model\n",
-    "    fine_tuned_model = ft_result.fine_tuned_model\n",
-    "    print(f\"Fine-tuned model: {fine_tuned_model}\")\n",
-    "\n",
-    "    return fine_tuned_model"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
@@ -2435,9 +2368,7 @@
      ]
     }
    ],
-   "source": [
-    "fine_tune_model('./data/hxl_chat_prompts.jsonl', model_name=\"gpt-4o-mini-2024-07-18-alpha\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
