Removed un-ocha as possible test set candidate

--- a/generate-test-train-data.ipynb
+++ b/generate-test-train-data.ipynb
@@ -2777,14 +2777,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 47,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
         "id": "kkwMFCwKAiz0",
-        "outputId": "d0124f2c-e485-495a-fd94-d3042c5b6c6a"
+        "outputId": "259f34aa-9b8e-44bc-8193-df552e2fbde2"
       },
       "outputs": [
         {
@@ -2864,7 +2864,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-16fba90d-086e-47b2-9a4f-198b8e536092\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-9fd8d076-f6f2-4f1b-aec9-2259326c1e7a\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -3255,7 +3255,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-16fba90d-086e-47b2-9a4f-198b8e536092')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9fd8d076-f6f2-4f1b-aec9-2259326c1e7a')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -3307,12 +3307,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-16fba90d-086e-47b2-9a4f-198b8e536092 button.colab-df-convert');\n",
+              "        document.querySelector('#df-9fd8d076-f6f2-4f1b-aec9-2259326c1e7a button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-16fba90d-086e-47b2-9a4f-198b8e536092');\n",
+              "        const element = document.querySelector('#df-9fd8d076-f6f2-4f1b-aec9-2259326c1e7a');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -3332,8 +3332,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-d67d7230-36a1-40b6-85ea-e911f2feb890\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-d67d7230-36a1-40b6-85ea-e911f2feb890')\"\n",
+              "<div id=\"df-bb7326f0-bf12-4683-98b8-03daef090cbd\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-bb7326f0-bf12-4683-98b8-03daef090cbd')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -3452,7 +3452,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-d67d7230-36a1-40b6-85ea-e911f2feb890 button');\n",
+              "        document.querySelector('#df-bb7326f0-bf12-4683-98b8-03daef090cbd button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -3473,18 +3473,18 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Train orgs: ['cerf', 'netherlands-red-cross', 'ocha-burundi', 'world-health-organization', 'ocha-roap', 'ocha-iraq', 'ourairports', 'ocha-mozambique-hat', 'ocha-libya', 'water-point-data-exchange', 'ocha-dr-congo', 'soswcaf', 'ocha-philippines', 'health-cluster', 'idi', 'lacso', 'ocha-rowca', 'ocha-fiss', 'ocha-cameroon', 'ocha-myanmar', 'fao-reowa', 'cbes', 'ocha-somalia', 'ifrc', 'standby-task-force', 'ocha-yemen', 'clear', 'insecurity-insight', 'ocha-opt', 'eth-zurich-weather-and-climate-risks', 'ocha-indonesia', 'libya-ingo-forum', 'ipc-cluster-guinea', 'world-bank-group', 'hdx', 'jcc', 'cpaor', 'gec', 'unrwa-for-palestine-refugees-in-the-near-east', 'ocha-ethiopia', 'ocha-colombia', 'ocha-chad', 'sadc_rvaa', 'srsgcc', 'ocha-haiti', 'ocha-eritrea', 'iati', 'ocha-afghanistan', 'brcmapsteam', 'ocha-turkey', 'kenya-national-bureau-of-statistics', 'ocha-mali', 'rcpwca', 'hera-humanitarian-emergency-response-africa', 'undp-human-development-reports-office', 'cesvi', 'ocha-rosc', 'unhcr', 'moving-energy-initiative', 'qcri', 'ewipa', 'reliefweb', 'international-displacement-monitoring-centre-idmc', 'cirrolytix', 'unicef-rdc', 'ocha-ds', 'unodc', 'ocha-south-sudan', 'hrrp-nepal', 'cred', 'jhucsse', 'infoculture', 'unicef-data', 'blavatnik-school-of-government-university-of-oxford', 'awsd', 'inter-sector-coordination-group', 'unhcr-afghanistan', 'ocha-car', 'fao', 'dalberg', 'ocha-nigeria', 'interaction', 'ocha-pakistan', 'redhum', 'ocha-rosea', 'hxl', 'ocha-burkina', 'ocha-rolac', 'ocha-sudan', 'ocha-niger', 'cfp-rco-nepal', 'somalia-ngo-consortium', 'ocha-fts', 'international-organization-for-migration', 'ocha-nepal', 'ipc', 'ocha-ukraine', 'unicef-esaro', 'crs-waro', 'unesco', 'education-cluster-yemen']\n",
-            "Test orgs: ['meers' 'un-ocha' 'immap' 'dhs' 'rca' 'cimp' 'global-shelter-cluster'\n",
-            " 'meers' 'wfp' 'fieldsdata']\n",
+            "Train orgs: ['cerf', 'netherlands-red-cross', 'ocha-burundi', 'world-health-organization', 'ocha-roap', 'ocha-iraq', 'ourairports', 'ocha-mozambique-hat', 'ocha-libya', 'water-point-data-exchange', 'ocha-dr-congo', 'soswcaf', 'ocha-philippines', 'health-cluster', 'idi', 'lacso', 'ocha-rowca', 'ocha-fiss', 'ocha-cameroon', 'ocha-myanmar', 'fao-reowa', 'cbes', 'ocha-somalia', 'ifrc', 'standby-task-force', 'ocha-yemen', 'clear', 'insecurity-insight', 'ocha-opt', 'eth-zurich-weather-and-climate-risks', 'ocha-indonesia', 'libya-ingo-forum', 'ipc-cluster-guinea', 'world-bank-group', 'hdx', 'jcc', 'un-ocha', 'wfp', 'cpaor', 'gec', 'unrwa-for-palestine-refugees-in-the-near-east', 'ocha-ethiopia', 'ocha-colombia', 'ocha-chad', 'sadc_rvaa', 'srsgcc', 'ocha-haiti', 'ocha-eritrea', 'iati', 'ocha-afghanistan', 'brcmapsteam', 'ocha-turkey', 'kenya-national-bureau-of-statistics', 'ocha-mali', 'rcpwca', 'cesvi', 'ocha-rosc', 'unhcr', 'moving-energy-initiative', 'qcri', 'ewipa', 'reliefweb', 'international-displacement-monitoring-centre-idmc', 'cirrolytix', 'unicef-rdc', 'ocha-ds', 'unodc', 'ocha-south-sudan', 'hrrp-nepal', 'cred', 'jhucsse', 'infoculture', 'unicef-data', 'blavatnik-school-of-government-university-of-oxford', 'awsd', 'inter-sector-coordination-group', 'unhcr-afghanistan', 'ocha-car', 'fao', 'dalberg', 'ocha-nigeria', 'interaction', 'ocha-pakistan', 'redhum', 'ocha-rosea', 'hxl', 'ocha-burkina', 'ocha-rolac', 'ocha-sudan', 'ocha-niger', 'cfp-rco-nepal', 'somalia-ngo-consortium', 'ocha-fts', 'international-organization-for-migration', 'ocha-nepal', 'ipc', 'ocha-ukraine', 'unicef-esaro', 'crs-waro', 'unesco', 'education-cluster-yemen']\n",
+            "Test orgs: ['meers' 'undp-human-development-reports-office' 'immap' 'dhs' 'rca'\n",
+            " 'cimp' 'global-shelter-cluster' 'meers' 'fieldsdata'\n",
+            " 'hera-humanitarian-emergency-response-africa']\n",
             "\n",
             "Train orgs: ['awsd' 'blavatnik-school-of-government-university-of-oxford'\n",
             " 'brcmapsteam' 'cbes' 'cerf' 'cesvi' 'cfp-rco-nepal' 'cirrolytix' 'clear'\n",
             " 'cpaor' 'cred' 'crs-waro' 'dalberg' 'education-cluster-yemen'\n",
             " 'eth-zurich-weather-and-climate-risks' 'ewipa' 'fao' 'fao-reowa' 'gec'\n",
-            " 'hdx' 'health-cluster' 'hera-humanitarian-emergency-response-africa'\n",
-            " 'hrrp-nepal' 'hxl' 'iati' 'idi' 'ifrc' 'infoculture' 'insecurity-insight'\n",
-            " 'inter-sector-coordination-group' 'interaction'\n",
-            " 'international-displacement-monitoring-centre-idmc'\n",
+            " 'hdx' 'health-cluster' 'hrrp-nepal' 'hxl' 'iati' 'idi' 'ifrc'\n",
+            " 'infoculture' 'insecurity-insight' 'inter-sector-coordination-group'\n",
+            " 'interaction' 'international-displacement-monitoring-centre-idmc'\n",
             " 'international-organization-for-migration' 'ipc' 'ipc-cluster-guinea'\n",
             " 'jcc' 'jhucsse' 'kenya-national-bureau-of-statistics' 'lacso'\n",
             " 'libya-ingo-forum' 'moving-energy-initiative' 'netherlands-red-cross'\n",
@@ -3498,17 +3498,18 @@
             " 'ocha-south-sudan' 'ocha-sudan' 'ocha-turkey' 'ocha-ukraine' 'ocha-yemen'\n",
             " 'ourairports' 'qcri' 'rcpwca' 'redhum' 'reliefweb' 'sadc_rvaa'\n",
             " 'somalia-ngo-consortium' 'soswcaf' 'srsgcc' 'standby-task-force'\n",
-            " 'undp-human-development-reports-office' 'unesco' 'unhcr'\n",
-            " 'unhcr-afghanistan' 'unicef-data' 'unicef-esaro' 'unicef-rdc' 'unodc'\n",
+            " 'un-ocha' 'unesco' 'unhcr' 'unhcr-afghanistan' 'unicef-data'\n",
+            " 'unicef-esaro' 'unicef-rdc' 'unodc'\n",
             " 'unrwa-for-palestine-refugees-in-the-near-east'\n",
-            " 'water-point-data-exchange' 'world-bank-group'\n",
+            " 'water-point-data-exchange' 'wfp' 'world-bank-group'\n",
             " 'world-health-organization']\n",
             "\n",
-            "Test orgs: ['cimp' 'dhs' 'fieldsdata' 'global-shelter-cluster' 'immap' 'meers' 'rca'\n",
-            " 'un-ocha' 'wfp']\n",
+            "Test orgs: ['cimp' 'dhs' 'fieldsdata' 'global-shelter-cluster'\n",
+            " 'hera-humanitarian-emergency-response-africa' 'immap' 'meers' 'rca'\n",
+            " 'undp-human-development-reports-office']\n",
             "\n",
-            "Train column data: (2971, 13)\n",
-            "Test column data: (385, 13)\n"
+            "Train column data: (2919, 13)\n",
+            "Test column data: (437, 13)\n"
           ]
         }
       ],
@@ -3556,7 +3557,7 @@
         "    single_entities = list(org_parents_unique[provider_col].unique())\n",
         "\n",
         "    # Remove 'hdx' from single_entities, not good for testing as it's the folks that made HXL! Also some monolithic orgs with very similar data\n",
-        "    single_entities = [x for x in single_entities if not x in ['hdx','ourairports']]\n",
+        "    single_entities = [x for x in single_entities if not x in ['hdx','ourairports', 'un-ocha']]\n",
         "\n",
         "    single_entities.sort()\n",
         "\n",
@@ -3603,13 +3604,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 48,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Rpzc5oAPAiz1",
-        "outputId": "b3f02ce8-a664-46c9-8409-a69f6bea2ed0"
+        "outputId": "e6d0efee-2ae2-4905-adfb-e72c0deb0d7c"
       },
       "outputs": [
         {
