Create test and train files

--- a/generate-test-train-data.ipynb
+++ b/generate-test-train-data.ipynb
@@ -89,6 +89,7 @@
         "DATA_GDRIVE=\"https://drive.google.com/file/d/1BDCuh0WVJWK1-1RMC-77cvh4H2Hep_ry/export?format=xlsx\"\n",
         "DATA_FILE=\"hdx-hxl-output.tgz\"\n",
         "\n",
+        "# If using Colab, this is where Google drive gets mounted. Otherwise leave blank\n",
         "GOOGLE_BASE_DIR = \"/content/drive/MyDrive/Colab\"\n",
         "\n",
         "# Where to save local data files\n",
@@ -3604,20 +3605,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 51,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Rpzc5oAPAiz1",
-        "outputId": "e6d0efee-2ae2-4905-adfb-e72c0deb0d7c"
+        "outputId": "40ee6f3e-eeb3-4ca3-a769-5386f9480f89"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Prompts written to /content/drive/MyDrive/Colab/hxl-metadata-prediction/data//hxl_chat_prompts.jsonl\n"
+            "\n",
+            "\n",
+            "Saving 437 prompts to /content/drive/MyDrive/Colab/hxl-metadata-prediction/data//hxl_completion_prompts_test.jsonl ...\n",
+            "Prompts written to /content/drive/MyDrive/Colab/hxl-metadata-prediction/data//hxl_completion_prompts_test.jsonl\n",
+            "\n",
+            "\n",
+            "Saving 2919 prompts to /content/drive/MyDrive/Colab/hxl-metadata-prediction/data//hxl_completion_prompts_train.jsonl ...\n",
+            "Prompts written to /content/drive/MyDrive/Colab/hxl-metadata-prediction/data//hxl_completion_prompts_train.jsonl\n",
+            "\n",
+            "\n",
+            "Saving 437 prompts to /content/drive/MyDrive/Colab/hxl-metadata-prediction/data//hxl_chat_prompts_test.jsonl ...\n",
+            "Prompts written to /content/drive/MyDrive/Colab/hxl-metadata-prediction/data//hxl_chat_prompts_test.jsonl\n",
+            "\n",
+            "\n",
+            "Saving 2919 prompts to /content/drive/MyDrive/Colab/hxl-metadata-prediction/data//hxl_chat_prompts_train.jsonl ...\n",
+            "Prompts written to /content/drive/MyDrive/Colab/hxl-metadata-prediction/data//hxl_chat_prompts_train.jsonl\n"
           ]
         }
       ],
@@ -3753,14 +3769,25 @@
         "\n",
         "    print(f\"Prompts written to {filename}\")\n",
         "\n",
-        "# Prompt for use with davinci-002\n",
-        "#completion_prompts = generate_prompts(X_train, hxl_tag=False, prompt_type='completion')\n",
-        "#save_prompts(completion_prompts, f\"{LOCAL_DATA_DIR}/hxl_completion_prompts.jsonl\")\n",
         "\n",
         "\n",
-        "# Prompt for use with GPT-3.5-Turbo or GPT-4o-mini\n",
-        "chat_prompts = generate_prompts(X_train, hxl_tag=True, prompt_type='chat')\n",
-        "save_prompts(chat_prompts, f\"{LOCAL_DATA_DIR}/hxl_chat_prompts.jsonl\")\n"
+        "def save_all_prompts():\n",
+        "  for prompt_type in ['completion', 'chat']:\n",
+        "      for dataset_type in [\"test\", \"train\"]:\n",
+        "          if dataset_type == \"train\":\n",
+        "              data = X_train\n",
+        "          else:\n",
+        "              data = X_test\n",
+        "\n",
+        "          prompt_file = f\"{LOCAL_DATA_DIR}/hxl_{prompt_type}_prompts_{dataset_type}.jsonl\"\n",
+        "          prompts = generate_prompts(data, hxl_tag=True, prompt_type=prompt_type)\n",
+        "\n",
+        "          print(f\"\\n\\nSaving {len(prompts)} prompts to {prompt_file} ...\")\n",
+        "\n",
+        "          save_prompts(prompts, prompt_file)\n",
+        "\n",
+        "\n",
+        "save_all_prompts()\n"
       ]
     },
     {
