--- a/openai-hxl-prediction.ipynb
+++ b/openai-hxl-prediction.ipynb
@@ -16,20 +16,37 @@
         "id": "U8r1UPQinjKj"
       },
       "source": [
-        "# Predicting HXL tags and attributes using Open AI\n",
+        "# Introduction\n",
         "\n",
         "This notebook provides examples of predicting HXL tags and attributes by (i) Fine-tuning GPT-4o; (ii) Direct prompting using the HXL standard.\n",
         "\n",
-        "## Results summary\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Key findings\n",
         "\n",
-        "Fine-tuning has limitations in that it is contrained by training data, and so can perform poorly on tags and attributes that are less well represented in the training data.\n",
+        "Fine-tuning an LLM to predict HXL tags is low-cost, but it constrained by the training data. Many datasets tagged with HXL has used tags and attributes which are not part of the HXL standard, and though there is good representation of tags and attributes related to location and dates, which are indeed very useful, beyond this coverage is poor. These challenges in the training data limit the scenarios in which the LLM fine-tuning technique can be applied.\n",
         "\n",
-        "Direct prompting of the model using the HXL standard which defines all tags and attributes has the advantage that it doesn't need training data. It is however more expensive than fine-tuning which can use less powerful models.\n",
-        "\n",
+        "However, in recent months there have been significant advances in LLMs, for example with the release of GPT-4o. Using this model, prompted with the full HXL standard definitions, it was shown that performance is better than fine-tuning and in some cases better than the humans who tagged the training data.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "I1OrajjQtAGQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Setup\n",
         "\n",
         "See [README](README.md) for instructions."
-      ]
+      ],
+      "metadata": {
+        "id": "TcRUFApItCgX"
+      }
     },
     {
       "cell_type": "code",
@@ -173,15 +190,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Generate a prompt using HXL standard\n"
-      ],
-      "metadata": {
-        "id": "FZXTOd7CW9Si"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "# Analysis\n",
         "\n",
         "## Check test/train\n",
@@ -191,6 +199,80 @@
       "metadata": {
         "id": "vrptvCe-p-ES"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Fine-tune"
+      ],
+      "metadata": {
+        "id": "jQfj5bE5f15v"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 99,
+      "metadata": {
+        "id": "_mYaiUQE8KHu"
+      },
+      "outputs": [],
+      "source": [
+        "def fine_tune_model(train_file, model_name=\"gpt-4o-mini\"):\n",
+        "    \"\"\"\n",
+        "    Fine-tune an OpenAI model using training data.\n",
+        "\n",
+        "    Args:\n",
+        "        prompt_file (str): The file containing the prompts to use for fine-tuning.\n",
+        "        model_name (str): The name of the model to fine-tune. Default is \"davinci-002\".\n",
+        "\n",
+        "    Returns:\n",
+        "        str: The ID of the fine-tuned model.\n",
+        "    \"\"\"\n",
+        "\n",
+        "    # Create a version of the train_file jsonl which only has \"messages\"\n",
+        "    train_file_short = train_file.replace(\".jsonl\", \"_short.jsonl\")\n",
+        "    with open(train_file) as f:\n",
+        "        prompts = [json.loads(line) for line in f]\n",
+        "        prompts = [p[\"messages\"] for p in prompts]\n",
+        "        with open(train_file_short, \"w\") as f:\n",
+        "            for p in prompts:\n",
+        "              row = {}\n",
+        "              row[\"messages\"] = p\n",
+        "              f.write(json.dumps(row) + \"\\n\")\n",
+        "\n",
+        "    # Upload file to OpenAI for fine-tuning\n",
+        "    file = client.files.create(\n",
+        "        file=open(train_file_short, \"rb\"),\n",
+        "        purpose=\"fine-tune\"\n",
+        "    )\n",
+        "    file_id = file.id\n",
+        "    print(f\"Uploaded training file with ID: {file_id}\")\n",
+        "\n",
+        "    # Start the fine-tuning job\n",
+        "    ft = client.fine_tuning.jobs.create(\n",
+        "        training_file=file_id,\n",
+        "        model=model_name\n",
+        "    )\n",
+        "    ft_id = ft.id\n",
+        "    print(f\"Fine-tuning job started with ID: {ft_id}\")\n",
+        "\n",
+        "    # Monitor the status of the fine-tuning job\n",
+        "    ft_result = client.fine_tuning.jobs.retrieve(ft_id)\n",
+        "    while ft_result.status != 'succeeded':\n",
+        "        print(f\"Current status: {ft_result.status}\")\n",
+        "        time.sleep(120)  # Wait for 60 seconds before checking again\n",
+        "        ft_result = client.fine_tuning.jobs.retrieve(ft_id)\n",
+        "        if 'failed' in ft_result.status.lower():\n",
+        "            sys.exit()\n",
+        "\n",
+        "    print(f\"Fine-tuning job {ft_id} succeeded!\")\n",
+        "\n",
+        "    # Retrieve the fine-tuned model\n",
+        "    fine_tuned_model = ft_result.fine_tuned_model\n",
+        "    print(f\"Fine-tuned model: {fine_tuned_model}\")\n",
+        "\n",
+        "    return fine_tuned_model"
+      ]
     },
     {
       "cell_type": "code",
@@ -1082,80 +1164,6 @@
           },
           "metadata": {}
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Fine-tune"
-      ],
-      "metadata": {
-        "id": "jQfj5bE5f15v"
-      }
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 99,
-      "metadata": {
-        "id": "_mYaiUQE8KHu"
-      },
-      "outputs": [],
-      "source": [
-        "def fine_tune_model(train_file, model_name=\"gpt-4o-mini\"):\n",
-        "    \"\"\"\n",
-        "    Fine-tune an OpenAI model using training data.\n",
-        "\n",
-        "    Args:\n",
-        "        prompt_file (str): The file containing the prompts to use for fine-tuning.\n",
-        "        model_name (str): The name of the model to fine-tune. Default is \"davinci-002\".\n",
-        "\n",
-        "    Returns:\n",
-        "        str: The ID of the fine-tuned model.\n",
-        "    \"\"\"\n",
-        "\n",
-        "    # Create a version of the train_file jsonl which only has \"messages\"\n",
-        "    train_file_short = train_file.replace(\".jsonl\", \"_short.jsonl\")\n",
-        "    with open(train_file) as f:\n",
-        "        prompts = [json.loads(line) for line in f]\n",
-        "        prompts = [p[\"messages\"] for p in prompts]\n",
-        "        with open(train_file_short, \"w\") as f:\n",
-        "            for p in prompts:\n",
-        "              row = {}\n",
-        "              row[\"messages\"] = p\n",
-        "              f.write(json.dumps(row) + \"\\n\")\n",
-        "\n",
-        "    # Upload file to OpenAI for fine-tuning\n",
-        "    file = client.files.create(\n",
-        "        file=open(train_file_short, \"rb\"),\n",
-        "        purpose=\"fine-tune\"\n",
-        "    )\n",
-        "    file_id = file.id\n",
-        "    print(f\"Uploaded training file with ID: {file_id}\")\n",
-        "\n",
-        "    # Start the fine-tuning job\n",
-        "    ft = client.fine_tuning.jobs.create(\n",
-        "        training_file=file_id,\n",
-        "        model=model_name\n",
-        "    )\n",
-        "    ft_id = ft.id\n",
-        "    print(f\"Fine-tuning job started with ID: {ft_id}\")\n",
-        "\n",
-        "    # Monitor the status of the fine-tuning job\n",
-        "    ft_result = client.fine_tuning.jobs.retrieve(ft_id)\n",
-        "    while ft_result.status != 'succeeded':\n",
-        "        print(f\"Current status: {ft_result.status}\")\n",
-        "        time.sleep(120)  # Wait for 60 seconds before checking again\n",
-        "        ft_result = client.fine_tuning.jobs.retrieve(ft_id)\n",
-        "        if 'failed' in ft_result.status.lower():\n",
-        "            sys.exit()\n",
-        "\n",
-        "    print(f\"Fine-tuning job {ft_id} succeeded!\")\n",
-        "\n",
-        "    # Retrieve the fine-tuned model\n",
-        "    fine_tuned_model = ft_result.fine_tuned_model\n",
-        "    print(f\"Fine-tuned model: {fine_tuned_model}\")\n",
-        "\n",
-        "    return fine_tuned_model"
       ]
     },
     {
@@ -2301,12 +2309,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Prediction analysis\n",
-        "\n",
-        "Next we will look at cases where the prediction failed to see patterns to address."
+        "### Prediction analysis\n"
       ],
       "metadata": {
         "id": "1qNTDXzp-HG6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Next we will look at cases where the prediction failed to see patterns to address."
+      ],
+      "metadata": {
+        "id": "xXqFZwKPqyfU"
       }
     },
     {
@@ -9022,7 +9037,8 @@
         "        frequency_penalty=0,\n",
         "        presence_penalty=0,\n",
         "        stop=None,\n",
-        "        stream=False\n",
+        "        stream=False,\n",
+        "        response_format={ \"type\": \"json_object\" }\n",
         "    )\n",
         "\n",
         "    result = response.choices[0].message.content\n",
@@ -9031,6 +9047,7 @@
         "        result = json.loads(result)\n",
         "        result[\"predicted\"] = result[\"predicted\"].replace(\" \",\"\")\n",
         "    except:\n",
+        "        print(result)\n",
         "        result = None\n",
         "    return result\n",
         "\n",
@@ -9083,9 +9100,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2yqwTF5ubVaL",
-        "outputId": "654dda40-f7af-4efe-8501-f0c2020d3e63"
+        "outputId": "f1e18996-6658-48bd-ef72-08b14ddf8304"
       },
-      "execution_count": 25,
+      "execution_count": 86,
       "outputs": [
         {
           "output_type": "stream",
@@ -9619,11 +9636,11 @@
         "  results = make_prompt_predictions(X_test, model, temperature=0.1, top_p=0.1, max_tokens=2000)"
       ],
       "metadata": {
-        "id": "RjsYqGwfFPeH",
-        "outputId": "f0785dfa-5386-4bca-e5db-15d9dc36854e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "RjsYqGwfFPeH",
+        "outputId": "f0785dfa-5386-4bca-e5db-15d9dc36854e"
       },
       "execution_count": 26,
       "outputs": [
@@ -9754,12 +9771,12 @@
         "display(breaks)"
       ],
       "metadata": {
-        "id": "HdTEG-_PMwwy",
-        "outputId": "a764eae6-e1ca-4964-e763-4478b0fccc16",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "HdTEG-_PMwwy",
+        "outputId": "a764eae6-e1ca-4964-e763-4478b0fccc16"
       },
       "execution_count": 38,
       "outputs": [
@@ -10662,12 +10679,12 @@
         "display(df2)"
       ],
       "metadata": {
-        "id": "9-fBZjrbVlC_",
-        "outputId": "7e8d821c-1cc4-4c5d-d656-52660784e057",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "9-fBZjrbVlC_",
+        "outputId": "7e8d821c-1cc4-4c5d-d656-52660784e057"
       },
       "execution_count": 39,
       "outputs": [
@@ -11538,11 +11555,11 @@
         "  pprint.pp(f'\\nReasoning: \\n{row[\"reasoning\"]}')\n"
       ],
       "metadata": {
-        "id": "-8B_cM8xWM1X",
-        "outputId": "9ac101b7-811e-42cc-975a-57395b474732",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-8B_cM8xWM1X",
+        "outputId": "9ac101b7-811e-42cc-975a-57395b474732"
       },
       "execution_count": 50,
       "outputs": [
@@ -14608,11 +14625,11 @@
         "  pprint.pp(f'\\nReasoning: \\n{row[\"reasoning\"]}')"
       ],
       "metadata": {
-        "id": "Byiv7oVxYepp",
-        "outputId": "c0d4655d-ce81-4ceb-83d9-0493bca7a23f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Byiv7oVxYepp",
+        "outputId": "c0d4655d-ce81-4ceb-83d9-0493bca7a23f"
       },
       "execution_count": 56,
       "outputs": [
@@ -14858,15 +14875,6 @@
       "metadata": {
         "id": "ABCSXEkXcxxw"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "Tk8eC4TzbmG8"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ],
   "metadata": {
